--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     implementation 'org.springframework.retry:spring-retry'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-    runtimeOnly    'org.postgresql:postgresql'
+    implementation 'org.flywaydb:flyway-core:11.2.0'
+    implementation 'org.flywaydb:flyway-database-postgresql:11.2.0'
+    runtimeOnly    'org.postgresql:postgresql:42.7.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webflux'
