fix: fix jdk base image distribution from temurin to amazoncorretto

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        distribution: temurin
-        java-version: 17
+        distribution: amazon-corretto
+        java-version: 17.0.13
         cache: gradle
     - name: Code vulnerability scanning
       uses: anchore/scan-action@v3
