fix: fix setup-java action distribution

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        distribution: amazoncorretto
+        distribution: corretto
         java-version: 17.0.13
         cache: gradle
     - name: Code vulnerability scanning
@@ -54,7 +54,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: amazoncorretto
+          distribution: corretto
           java-version: 17.0.13
           cache: gradle
       - name: Build container image
