chore: fix github action pipeline to activate integration profile in build stage

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Build, unit tests and integration tests
       run: |
         chmod +x gradlew
-        ./gradlew build
+        ./gradlew build -Dspring.profiles.active=integration
 
   package:
     name: Package and Publish
