--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -38,6 +38,13 @@ jobs:
       run: |
         chmod +x gradlew
         ./gradlew build -Dspring.profiles.active=integration
+    - name: Validate Kubernetes manifests
+      uses: stefanprodan/kube-tools@v1
+      with:
+        kubectl: 1.31.3
+        kubeval: 0.16.1
+        command: |
+          kubeval --strict -d k8s
 
   package:
     name: Package and Publish
